Fixes UI alignments
- Updates cache location to sessionStorage

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,6 +6,13 @@ a.title {
     color: white;
 }
 
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 .footer-text {
     font-size: small;
     text-align: center;
