--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 table {
     width: 70%;
-    margin: 10% auto auto auto;
+    margin: 3rem auto auto auto;
 }
 
 .card-section {
